# aestival

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  deploy.sh  package-lock.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
app/: im_adapter.cpp  llm_adapter.cpp  main.cpp  stdafx.cpp  stdafx.h
config/: bot_config.example.json  bot_config.json
core/config/: bot_config.cpp  bot_config.h
core/include/: agent_controller.h  agent_instance.h  agent_reach_client.h  agent_reach_plugin.h  agent_registry.h  bot_messaging.h  chat_context_manager.h  chat_storage_sqlite.h  console_api.h  encode_utils.h  log.h  management_api.h  management_auth.h  message_types.h  model_client.h  platform_session.h  plugin.h  plugin_manager.h  policy_engine.h  runtime_mode.h  self_iteration.h  self_iteration_prompts.h  simple_test_plugin.h  system_command_handler.h  token_counter.h  tool_registry.h  worker_pool.h
core/src/: agent_controller.cpp  agent_reach_client.cpp  agent_registry.cpp  chat_context_manager.cpp  log.cpp  management_api.cpp  policy_engine.cpp  self_iteration.cpp  system_command_handler.cpp  worker_pool.cpp
docs/: REVIEW-2026-07-23.md
platform/include/platform/: deepseek.h  http_client.h  log.h  openai.h
platform/include/platform/detail/: http_utils.h  sanitize.h
platform/include/platform/qq/: api.h  dispatch.h  session.h  types.h
platform/include/platform/ws/: ws_client.h  ws_utils.h
platform/src/: deepseek.cpp  http_client.cpp  openai.cpp
platform/src/qq/: api.cpp  api_guild.cpp  api_messaging.cpp  auth.cpp  dispatch.cpp  run.cpp  session.cpp  transport.cpp
platform/src/ws/: ws_client.cpp  ws_utils.cpp
webui/backend/: .env.example  package-lock.json  package.json
webui/backend/src/: accounts.ts  auth.ts  config.ts  conversations.ts  credentials.ts  db.ts  index.ts  logs.ts  oauth.ts  oauth_github.ts  oauth_qq.ts  proxy.ts  sanitize.ts
webui/deploy/: aestival-webui.service  nginx-aestival.conf
webui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
webui/frontend/src/: App.tsx  index.css  main.tsx
webui/frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  LoginPage.tsx  ProtectedRoute.tsx  RegisterPage.tsx
webui/frontend/src/lib/: api.ts  auth.ts  auth.tsx
webui/frontend/src/pages/: Agents.tsx  AuthCallback.tsx  Conversations.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  Settings.tsx
workspace/: AGENTS.md  GROUP_RULES.md  IDENTITY.md  MEMORY.md  PROMPT.md  SOUL.md  TOOLS.md  USER.md
